--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -1,39 +1,39 @@
-FROM moleszek/ansible:9.0.1
+FROM moleszek/ansible:13.2.0
 
-# Variables
-ARG username=bind9
-ARG path=/bind9
-ARG config=/ansible
+ARG username=vscode
 
-# Environment
 ENV USER=${username}
 ENV USERNAME=${username}
+ENV PATH="/home/${username}/.local/bin:${PATH}"
 
-# Use user root
-USER root
+RUN apt update && apt upgrade -y && apt install curl git locales -y && apt autoremove -y && apt clean\
+  && useradd -ms /bin/bash ${username} \
+  && pip install pre-commit --break-system-packages \
+  && echo "LC_ALL=en_US.UTF-8" >> /etc/environment \
+  && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen \
+  && echo "LANG=en_US.UTF-8" > /etc/locale.conf \
+  && locale-gen en_US.UTF-8 \
+  && curl -o /tmp/install.sh https://starship.rs/install.sh \
+  && sh /tmp/install.sh -y \
+  && mkdir /home/${username}/.config \
+  && starship preset no-empty-icons -o /home/${username}/.config/starship.toml \
+  && echo 'eval "$(starship init bash)"' >> /home/${username}/.bashrc \
+  && echo "export LANG=" >> /home/${username}/.bashrc \
+  && echo "export LANGUAGE=" >> /home/${username}/.bashrc \
+  && echo "export LC_CTYPE='POSIX'" >> /home/${username}/.bashrc \
+  && echo "export LC_NUMERIC='POSIX'" >> /home/${username}/.bashrc \
+  && echo "export LC_TIME='POSIX'" >> /home/${username}/.bashrc \
+  && echo "export LC_COLLATE='POSIX'" >> /home/${username}/.bashrc \
+  && echo "export LC_MONETARY='POSIX'" >> /home/${username}/.bashrc \
+  && echo "export LC_MESSAGES='POSIX'" >> /home/${username}/.bashrc \
+  && echo "export LC_PAPER='POSIX'" >> /home/${username}/.bashrc \
+  && echo "export LC_NAME='POSIX'" >> /home/${username}/.bashrc \
+  && echo "export LC_ADDRESS='POSIX'" >> /home/${username}/.bashrc \
+  && echo "export LC_TELEPHONE='POSIX'" >> /home/${username}/.bashrc \
+  && echo "export LC_MEASUREMENT='POSIX'" >> /home/${username}/.bashrc \
+  && echo "export LC_IDENTIFICATION='POSIX'" >> /home/${username}/.bashrc \
+  && echo "export LC_ALL=" >> /home/${username}/.bashrc
 
-# Add user bind9
-RUN useradd -ms /bin/bash ${username}
+WORKDIR /home/${username}
 
-# Create folders
-RUN mkdir ${path}
-
-RUN chown -R ${username}:${username} ${path}
-RUN chown -R ${username}:${username} ${config}
-
-# Install packages
-RUN apt-get update && apt-get install wget sshpass less gpg -y
-
-# Install ansible-lint
-RUN pip install --upgrade pip
-RUN pip install ansible-lint
-
-# Install oh-my-posh
-RUN wget https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/posh-linux-amd64 -O /usr/local/bin/oh-my-posh
-RUN chmod +x /usr/local/bin/oh-my-posh
-RUN echo 'eval "$(oh-my-posh init bash --config /bind9/.devcontainer/configuration/terminal.omp.json)"' >> /home/${username}/.bashrc
-
-# User bind9
-USER ${username}
-
-ENTRYPOINT [ "/bin/bash" ]
+ENTRYPOINT [ "bash" ]
