--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -13,7 +13,11 @@ jobs:
     name: Run Ansible lint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v6
-
-    - name: Check yaml files
-      uses: ansible/ansible-lint@v26.1.0
+      - uses: actions/checkout@v6
+      - name: Install Ansible collections
+        run: ansible-galaxy collection install -r requirements.yml
+      - name: Check yaml files
+        uses: ansible/ansible-lint@v26.1.0
+        with:
+          args: "-c ../.ansible-lint"
+          working_directory: "ansible"
